--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+  .neonText {
+  text-shadow:
+    0 0 7px #755aff,
+    0 0 10px #ffff,
+    0 0 21px #755aff,
+    0 0 42px #ffff,
+    0 0 82px #755aff,
+    0 0 92px #ffff,
+    0 0 102px #755aff,
+    0 0 151px #ffff;
+}
